# infrastructure/database/src/main/java/br/com/liftrecord/tables/AccountTable.java
@@ -12,6 +12,7 @@ import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
+import java.time.LocalDate;
 import java.util.Objects;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -42,6 +43,7 @@ public class AccountTable {
   @OneToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
   @JoinColumn(name = "address_id", nullable = false)
   private AddressTable address;
+  private LocalDate birthDate;
 
   public AccountTable(Account account) {
     this.id = account.getId().getValue();
@@ -50,9 +52,10 @@ public class AccountTable {
     this.cellphone = Objects.requireNonNull(account.getContact().getCellphone()).getFullNumber();
     this.password = Objects.requireNonNull(account.getPassword()).orElse(null);
     this.status = account.getStatus();
+    this.birthDate = account.getBirthDate();
   }
 
   public Account toDomain() {
-    return new Account(id, name, email, cellphone, password, status);
+    return new Account(id, name, email, cellphone, password, status, birthDate);
   }
 }
