# infrastructure/http/src/main/java/br/com/liftrecord/student/StudentController.java
@@ -4,8 +4,9 @@ import br.com.liftrecord.openapi.api.StudentApi;
 import org.springframework.http.ResponseEntity;
 
 public class StudentController implements StudentApi {
+
   @Override
-  public ResponseEntity<Void> deleteStudentsStudentId(String studentId) {
+  public ResponseEntity<Void> postApiV1Students() {
     return null;
   }
 }
